[workspace]
members = ["crates/*"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
authors = ["Foundry Maintainers"]
version = "0.22.0"
rust-version = "1.76"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundry-rs/block-explorers"
homepage = "https://github.com/foundry-rs/block-explorers"
edition = "2021"
exclude = [".github/", "scripts/", "test-data/"]

[workspace.dependencies]
alloy-chains = "0.2"
alloy-primitives = { version = "1.3", default-features = false, features = [
    "std",
    "serde",
] }
alloy-json-abi = { version = "1.3", default-features = false }
alloy-rpc-types-eth = "1.0"
alloy-eips = "1.0"
alloy-serde = "1.0"

reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.47" }
