[workspace]
members = ["crates/*"]

resolver = "3"

[workspace.package]
authors = ["Foundry Maintainers"]
version = "0.22.0"
rust-version = "1.93"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundry-rs/block-explorers"
homepage = "https://github.com/foundry-rs/block-explorers"
edition = "2024"
exclude = [".github/", "scripts/", "test-data/"]

[workspace.lints.clippy]
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg-macro = "warn"
explicit_iter_loop = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
# until <https://github.com/rust-lang/rust-clippy/issues/13885> is fixed
literal-string-with-formatting-args = "allow"
result_large_err = "allow"

[workspace.lints.rust]
redundant_imports = "warn"
redundant-lifetimes = "warn"
rust-2018-idioms = "warn"
unused-must-use = "warn"
# unreachable-pub = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
alloy-chains = "0.2"
alloy-primitives = { version = "1.3", default-features = false, features = [
    "std",
    "serde",
] }
alloy-json-abi = { version = "1.3", default-features = false }
alloy-rpc-types-eth = "1.0"
alloy-eips = "1.0"
alloy-serde = "1.0"

reqwest = { version = "0.13", default-features = false, features = ["json", "query", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.47" }
