[package]
name = "foundry-blob-explorers"
version = "0.1.0"
edition = "2021"
authors = ["Foundry & Alloy Contributors"]
license = "MIT OR Apache-2.0"
description = "Bindings for blobscan.com and other blob explorer APIs"
keywords = ["ethereum", "blobscan"]
readme = "README.md"

[dependencies]
alloy-chains.workspace = true
alloy-primitives = { workspace = true, default-features = false, features = ["std", "serde"] }

alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy" }

reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
openssl = ["reqwest/native-tls"]

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
